chore: update .gitignore and README, add ranreport class file

--- a/example.tex
+++ b/example.tex
@@ -1,14 +1,15 @@
-\documentclass{ranfr}
+\documentclass{ranreport}
 
-\title{ranfr.cls模板使用示例}
+\title{ranreport.cls模板使用示例}
 \author{RanFR}
 \date{\today}
 
 \begin{document}
+
 \maketitle
 
 \begin{abstract}
-    在这个示例教程中，我们将演示如何使用ranfr.cls模板来创建一个简单的中文文档。这个文档包括数学公式、表格、图片、列表、代码和参考文献等内容。
+    在这个示例教程中，我们将演示如何使用ranreport.cls模板来创建一个简单的中文文档。这个文档包括数学公式、表格、图片、列表、代码和参考文献等内容。
 \end{abstract}
 
 \section{数学公式示例}
@@ -78,7 +79,7 @@
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.6\textwidth]{pictures/example.png}
+    \includegraphics[width=0.6\textwidth]{assets/example.png}
     \caption{一张图片}
 \end{figure}
 
