update: modify README and example files for clarity, enhance ranreport class with font options

--- a/example.tex
+++ b/example.tex
@@ -1,4 +1,4 @@
-\documentclass{ranreport}
+\documentclass[]{ranreport} % 添加times选项使用 Times New Roman 字体
 
 \title{ranreport.cls模板使用示例}
 \author{RanFR}
