update: replace minted package with listings for code highlighting in ranarticle class and example.tex

--- a/example.tex
+++ b/example.tex
@@ -151,12 +151,12 @@
 
 这是一个Python代码示例：
 
-\begin{minted}{python}
+\begin{lstlisting}[language=Python]
     def hello_world():
         print("Hello, World!")
 
     hello_world()
-\end{minted}
+\end{lstlisting}
 
 \section{伪代码示例}
 
