update: add bibliography support in ranarticle class and include references in example.tex

--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,7 @@
 \documentclass{ranarticle}
 
+\addbibresource{references.bib}
+
 \title{ranarticle.cls模板使用示例}
 
 \author{RanFR}
@@ -186,5 +188,7 @@
 温度：25\degree C
 
 欧姆：53 \ohm
+
+\printbibliography[title={参考文献}]
 
 \end{document}
